WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
95050
WebKit fails to compile with both Qt+Wince support enabled
https://bugs.webkit.org/show_bug.cgi?id=95050
Summary
WebKit fails to compile with both Qt+Wince support enabled
Kevin Funk
Reported
2012-08-26 23:52:17 PDT
The problem is in NativeImagePtr.h, when both OS(WINCE) and PLATFORM(QT) are true. The file is split into declaration + typedef part - the first part assumes Qt platform support, the second one support for WinCE, which leads to a compile error. Patch follows.
Attachments
Patch
(1.97 KB, patch)
2012-08-27 00:00 PDT
,
Kevin Funk
gtk-ews
: commit-queue-
Details
Formatted Diff
Diff
Patch v2
(1.81 KB, patch)
2012-08-27 01:34 PDT
,
Kevin Funk
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Kevin Funk
Comment 1
2012-08-27 00:00:40 PDT
Created
attachment 160652
[details]
Patch
WebKit Review Bot
Comment 2
2012-08-27 00:03:06 PDT
Attachment 160652
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/platform/graphics/NativeImagePtr.h:31: Header file should not contain WebCore config.h. Should be: alphabetically sorted. [build/include_order] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
kov's GTK+ EWS bot
Comment 3
2012-08-27 00:20:40 PDT
Comment on
attachment 160652
[details]
Patch
Attachment 160652
[details]
did not pass gtk-ews (gtk): Output:
http://queues.webkit.org/results/13601992
Kevin Funk
Comment 4
2012-08-27 01:34:34 PDT
Created
attachment 160663
[details]
Patch v2
WebKit Review Bot
Comment 5
2012-08-27 12:06:32 PDT
Comment on
attachment 160663
[details]
Patch v2 Clearing flags on attachment: 160663 Committed
r126783
: <
http://trac.webkit.org/changeset/126783
>
WebKit Review Bot
Comment 6
2012-08-27 12:06:35 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug