Fix compilation when both OS(WINCE) and PLATFORM(QT) are true https://bugs.webkit.org/show_bug.cgi?id=95050

Patch by Kevin Funk <kevin.funk@kdab.com> on 2012-08-27
Reviewed by Simon Hausmann.

The compilation of NativeImagePtr.h breaks when both OS(WINCE) and PLATFORM(QT) are enabled.
This patch fixes this.

* platform/graphics/NativeImagePtr.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@126783 bbb929c8-8fbe-4397-9dbb-9b2b20218538