third_party/WebKit/Source/WebCore/platform/graphics/NativeImagePtr.h
@@ -53,6 +53,8 @@ namespace WebCore {
 
 #if USE(CG)
 typedef CGImageRef NativeImagePtr;
+#elif PLATFORM(QT)
+typedef QImage* NativeImagePtr;
 #elif PLATFORM(OPENVG)
 class TiledImageOpenVG;
 typedef TiledImageOpenVG* NativeImagePtr;
@@ -70,8 +72,6 @@ typedef WebCore::NativeImageSkia* NativeImagePtr;
 typedef RefPtr<SharedBitmap> NativeImagePtr;
 #elif PLATFORM(BLACKBERRY)
 typedef void* NativeImagePtr;
-#elif PLATFORM(QT)
-typedef QImage* NativeImagePtr;
 #endif
 
 }
